--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_svg: ^1.0.0
   firebase_auth: ^3.3.4
   firebase_core: ^1.10.6
+  country_code_picker: ^2.0.2
 
 dev_dependencies:
   flutter_test:
